Adjust navbar to function correctly on mobile
Shrink image so that it is more inline with hamburger icon. Color
hamburger icon as we cannot rely on the theme's navbar styling since it
only has colored navbars.

--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,11 @@
+.header .navbar-brand > img {
+  height: 40px;
+}
+
+/* Theme only allows for colored navbars, but we want white so need to color the hamburger menu */
+.navbar-toggle { border: 1px solid #ccc; }
+.navbar-toggle .icon-bar { background-color: #666;}
+
 .footer {
   font-size: smaller;
 
